<resources>
    <string name="app_name">ImageProtect</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">主页</string>
    <string name="share">上传</string>
    <string name="download">下载</string>
    <string name="search">搜索</string>
    <string name="friend">好友</string>
    <string name="friends">好友列表</string>
    <string name="set">设置</string>
    <string name="about">关于</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <!--<string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--<string name="navigation_drawer_close">Close navigation drawer</string>-->
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_register_all_error">请填写完整注册信息</string>
    <string name="toast_register_pswlenth_error">密码应大于等于6位</string>
    <string name="toast_register_psw_unequal_error">两次输入密码不同</string>
    <string name="toast_register_success">注册成功</string>
    <string name="action_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

</resources>
