<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/nav_menu">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/iconfont_home"
            android:title="@string/home"
            app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/iconfont_share"
            android:title="@string/share"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/iconfont_download"
            android:title="@string/download"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/iconfont_search"
            android:title="@string/search"
            app:showAsAction="ifRoom"/>
    </group>

    <group android:id="@+id/group3">
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/iconfont_friends"
            android:title="@string/friend"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/iconfont_set"
            android:title="@string/set"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/iconfont_about"
            android:title="@string/about"
            app:showAsAction="ifRoom"/>
    </group>
</menu>